[build-system]

requires = ["setuptools >= 61.0"]

build-backend = "setuptools.build_meta"

[project]

name = "pdfCropMargins"

dynamic = ["version"]

description = "A command-line program to crop the margins of PDF files, with many options."

readme = "README.rst"

license = { file = "LICENSE" }

authors = [
    { name = "Allen Barker", email = "Allen.L.Barker@gmail.com" }, ]

keywords = [
    "crop",
    "margins",
    "pdf",
    "resize", ]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities", ]

dependencies = [
    "pillow>=10.1.0",
    "PyMuPDF>=1.19.6",
    "wheel", ]

[project.scripts]

pdf-crop-margins = "pdfCropMargins.pdfCropMargins:main"
pdfcropmargins = "pdfCropMargins.pdfCropMargins:main"

[project.urls]

Homepage = "https://github.com/abarker/pdfCropMargins"

[tool.setuptools.dynamic]

version = {attr = "pdfCropMargins.__init__.__version__"}

